--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 1.4;
-    color: black;
-    margin:0;
+    color: white;
+    margin: 0;
     background-image: url(https://www.freecodecamp.org/news/content/images/2021/06/w-qjCHPZbeXCQ-unsplash.jpg);
 }
 
@@ -20,12 +20,108 @@ body{
     margin-bottom: 35px;
 }
 
-h1{
-    
+.initial{
+    text-align: center;
 }
 
+h1{
+    font-weight: 500;
+    line-height: 1.4;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
 
-    
+p{
+    margin-bottom: 8px;
+    margin-top: 0;
+    font-size: 19px;
+}
 
+#description{
+    font-weight: 200;
+    font-style: italic;
+}
 
+#survey-form{
+    width:60%;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
 
+}
+
+form{
+    padding: 40px 10px;
+    border-radius: 5px;
+    background-color: rgba(137, 43, 226, 0.445);
+}
+
+.form-questions{
+    margin: 0 auto 15px auto;
+    padding: 4px;
+}
+
+.form-control{
+    display: block;
+    width: 95%;
+    height: 40px;
+    padding: 6px 10px;
+    color: #495057;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    background-color: #fff;
+    background-clip: border-box;
+    font-size: 18px;
+}
+
+label{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.check{
+    font-size: 16px;
+    margin-left: 4px;
+    color: #e4e4e4;
+}
+
+.input-radio{
+    display: inline-block;
+    margin-right: 10px;
+    min-width: 20px;
+    min-height: 20px;
+}
+
+.input-checkbox {
+    display: inline-block;
+    margin-right: 10px;
+    min-width: 20px;
+    min-height: 20px;
+}
+
+.input-textarea{
+    width: 95%;
+    padding: 10px;
+    min-height: 100px;
+    font-size: 20px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.submit-button{
+    display: block;
+    width: 95%;
+    padding: 15px;
+    border: 1px solid  rgba(145, 6, 145, 0.733);
+    border-radius: 4px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    background: rgba(163, 12, 163, 0.774);
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+}
